# ogs-buddy

./: .gitignore  README.md  pyproject.toml  requirements.txt
ogs_buddy/: anki_connect.py
